# tauri-plugin-hotkey

./: Cargo.toml  LICENSE  README.md  build.rs  bump.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  crates-publish.yml  npm-publish.yml
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  error.rs  lib.rs  models.rs
