[package]
name = "tauri-plugin-hotkey"
version = "0.1.10"
authors = [ "VoixApp Team <team@voix.su>" ]
edition = "2021"
rust-version = "1.84.1"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-hotkey"
license = "MIT"
repository = "https://github.com/voixapp/tauri-plugin-hotkey"
description = """
Tauri Plugin to receive hotkey press and release OS events.
"""

[package.metadata]
owners = ["voixapp"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "tauri_plugin_hotkey"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2.2.5" }
serde = "1.0.217"
thiserror = "2.0.11"
device_query = "3.0.1"
log = "0.4.25"

[build-dependencies]
tauri-plugin = { version = "2.0.4", features = ["build"] }
